# mobile-power-saver

./: README.md  devices.json  meson.build  meson_options.txt
common/: define.h  logind.c  services.c  services.h  systemd.c  systemd.h  utils.c  utils.h
data/: meson.build  mobile-power-saver.service.in  mps.gresource.xml  org.adishatz.Mps.conf  org.adishatz.Mps.gschema.xml  org.adishatz.Mps.service.in  org.adishatz.Mps.xml
debian/: changelog  control
patches/: gnome-control-center.patch
system/: binder.c  binder.h  binder_client.c  binder_client.h  binder_power.c  binder_power.h  binder_radio.c  binder_radio.h  bus.c  bus.h  cpufreq.c  cpufreq.h  cpufreq_device.c  cpufreq_device.h  devfreq.c  devfreq.h  devfreq_device.c  devfreq_device.h  freezer.c  freezer.h  freq_device.c  freq_device.h  kernel_settings.c  kernel_settings.h  logind.c  logind.h  main.c  manager.c  manager.h  meson.build  modem.c  modem.h  modem_mm.c  modem_mm.h  modem_ofono.c  modem_ofono.h  modem_ofono_device.c  modem_ofono_device.h  network_manager.c  network_manager.h  (+2 more)
user/: bus.c  bus.h  dozing.c  dozing.h  main.c  manager.c  meson.build  mpris.c  mpris.h  network_manager.c  network_manager.h  settings.c  settings.h
